--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,14 +10,54 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:17
+        env:
+          POSTGRES_DB: test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
+    env:
+      DB_URL: jdbc:postgresql://localhost:5432/pizza_mock
+      DB_USERNAME: postgres
+      DB_PASSWORD: postgres
+      JWT_SECRET: mysupersecuresecretthatatleast32characterslong
+      
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag cxgdn/arainea-frontend:latest
     - name: login
       run: docker login -u cxgdn -p dckr_pat_NQDxIKYdnllF5XD5HRDypIEYy1U
+    - name: Pull docker Image
+      run: docker pull docker.io/pattaratos/arainea-backend:latest
+    - name: Run docker for backend
+      run: |
+        docker run -d --name be \
+          -p 8080:8080 \
+          --env SPRING_DATASOURCE_URL=${{ env.DB_URL }} \
+          --env SPRING_DATASOURCE_USERNAME=${{ env.DB_USERNAME }} \
+          --env SPRING_DATASOURCE_PASSWORD=${{ env.DB_PASSWORD }} \
+          --env APP_JWT_SECRET=${{ env.JWT_SECRET }} \
+          --env APP_JWT_EXPIRES_DAYS=30 \
+          pattaratos/arainea-backend:latest
+    - name: Run container for frontend
+      run: docker run -d -p 3000:3000 --name frontend cxgdn/arainea-frontend:latest
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 18
+    - name: install dep
+      run: npm ci
+    - name: Run Cypress tests
+      uses: cypress-io/github-action@v6
+      with:
+        start: ""
+        wait-on: "http://localhost:3000"
+        wait-on-timeout: 120
+        command: npm run cypress:run
     - name: push docker
       run: docker push cxgdn/arainea-frontend:latest
-    - name: Run container
-      run: docker run -d -p 3000:3000 --name frontend cxgdn/arainea-frontend:latest
   
