--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,8 +19,13 @@ jobs:
           POSTGRES_PASSWORD: postgres
         ports:
           - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
     env:
-      DB_URL: jdbc:postgresql://localhost:5432/pizza_mock
+      DB_URL: jdbc:postgresql://localhost:5432/test
       DB_USERNAME: postgres
       DB_PASSWORD: postgres
       JWT_SECRET: mysupersecuresecretthatatleast32characterslong
