--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
           --health-timeout=5s
           --health-retries=5
     env:
-      DB_URL: jdbc:postgresql://localhost:5432/test
+      DB_URL: jdbc:postgresql://postgres:5432/test
       DB_USERNAME: postgres
       DB_PASSWORD: postgres
       JWT_SECRET: mysupersecuresecretthatatleast32characterslong
@@ -51,7 +51,7 @@ jobs:
     - name: Run container for frontend
       run: docker run -d -p 3000:3000 --name frontend cxgdn/arainea-frontend:latest
     - name: Wait for backend
-      run: curl --fail http://localhost:8080/home
+      run: curl http://localhost:8080/home
 
     - name: Setup Node.js
       uses: actions/setup-node@v4
