--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
       postgres:
         image: postgres:17
         env:
-          POSTGRES_DB: test
+          POSTGRES_DB: pizza_mock
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
         ports:
@@ -25,7 +25,7 @@ jobs:
           --health-timeout=5s
           --health-retries=5
     env:
-      DB_URL: jdbc:postgresql://postgres:5432/test
+      DB_URL: jdbc:postgresql://localhost:5432/pizza_mock
       DB_USERNAME: postgres
       DB_PASSWORD: postgres
       JWT_SECRET: mysupersecuresecretthatatleast32characterslong
