--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -52,7 +52,9 @@ jobs:
       run: docker run -d -p 3000:3000 --name frontend cxgdn/arainea-frontend:latest
     - name: Wait for backend
       run: curl http://localhost:8080/home/
-
+    - name: Show backend logs
+      if: failure()
+      run: docker logs be
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
