--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
           --health-timeout=5s
           --health-retries=5
     env:
-      DB_URL: jdbc:postgresql://localhost:5432/pizza_mock
+      DB_URL: jdbc:postgresql://postgres:5432/pizza_mock
       DB_USERNAME: postgres
       DB_PASSWORD: postgres
       JWT_SECRET: mysupersecuresecretthatatleast32characterslong
