--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,7 +40,8 @@ jobs:
       run: docker pull docker.io/pattaratos/arainea-backend:latest
     - name: Run docker for backend
       run: |
-        docker run -d --name be \
+        docker run -d --name backend \
+          -p 8080:8080
           --env SPRING_DATASOURCE_URL=${{ env.DB_URL }} \
           --env SPRING_DATASOURCE_USERNAME=${{ env.DB_USERNAME }} \
           --env SPRING_DATASOURCE_PASSWORD=${{ env.DB_PASSWORD }} \
