--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     services:
       postgres:
         image: postgres:16
@@ -23,33 +24,34 @@ jobs:
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
+
     env:
       DB_URL: jdbc:postgresql://postgres:5432/pizza
       DB_USERNAME: pizzauser
       DB_PASSWORD: pizzapass
       JWT_SECRET: mysupersecuresecretthatatleast32characterslong
+      VITE_API_URL: http://localhost:8080
 
     steps:
+      # Checkout repo
       - uses: actions/checkout@v4
 
+      # Build frontend Docker image
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag cxgdn/arainea-frontend:latest
 
-      - name: login
+      # Login to Docker Hub
+      - name: Login to Docker Hub
         run: docker login -u cxgdn -p dckr_pat_NQDxIKYdnllF5XD5HRDypIEYy1U
 
-      - name: Pull docker Image
+      # Pull backend image from Docker Hub
+      - name: Pull backend image
         run: docker pull docker.io/pattaratos/arainea-backend:latest
 
-      # ✅ Create network
-      - name: Create network
-        run: docker network create arainea-net
-
-      # ✅ Run backend
+      # Run backend container (no custom network → connects to postgres service automatically)
       - name: Run backend
         run: |
           docker run -d --name be \
-            --network=arainea-net \
             -p 8080:8080 \
             --env SPRING_DATASOURCE_URL=${{ env.DB_URL }} \
             --env SPRING_DATASOURCE_USERNAME=${{ env.DB_USERNAME }} \
@@ -58,47 +60,54 @@ jobs:
             --env APP_JWT_EXPIRES_DAYS=30 \
             pattaratos/arainea-backend:latest
 
-      # ✅ Wait for backend to be ready
+      # Wait for backend to be ready before continuing
       - name: Wait for backend to be ready
         run: |
-          echo "⏳ Waiting for backend to start on port 8080..."
-          for i in {1..20}; do
-            if curl -s http://localhost:8080/actuator/health >/dev/null; then
-              echo "✅ Backend is up!"
+          echo "⏳ Waiting for backend to start..."
+          for i in {1..30}; do
+            if curl -s http://localhost:8080/home >/dev/null; then
+              echo "✅ Backend is ready!"
               exit 0
             fi
-            echo "Waiting ($i/20)..."
+            echo "⌛ Waiting ($i/30)..."
             sleep 5
           done
-          echo "❌ Backend did not start in time."
+          echo "❌ Backend did not start in time"
           docker logs be
           exit 1
 
-      # ✅ Run frontend container (with same network + API URL)
-      - name: Run container for frontend
-        run: docker run -d --network=arainea-net -p 3000:3000 --name frontend \
-               -e VITE_API_URL=http://localhost:8080 \
-               cxgdn/arainea-frontend:latest
+      # Run frontend container (same default network)
+      - name: Run frontend
+        run: |
+          docker run -d --name frontend \
+            -p 3000:3000 \
+            -e VITE_API_URL=${{ env.VITE_API_URL }} \
+            cxgdn/arainea-frontend:latest
 
+      # Show backend logs if any step fails
       - name: Show backend logs
         if: failure()
         run: docker logs be
 
+      # Setup Node for Cypress
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: install dep
+      # Install Cypress dependencies
+      - name: Install dependencies
         run: npm ci
 
+      # Run Cypress tests after frontend is ready
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
           wait-on: "http://localhost:3000"
-          wait-on-timeout: 120
+          wait-on-timeout: 180
         env:
           VITE_API_URL: http://localhost:8080
 
-      - name: push docker
+      # Push frontend image back to Docker Hub (optional)
+      - name: Push Docker image
         run: docker push cxgdn/arainea-frontend:latest
