--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -122,3 +122,28 @@ jobs:
       # Push image (optional)
       - name: Push Docker image
         run: docker push cxgdn/arainea-frontend:latest
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Backend repo
+        uses: actions/checkout@v4
+  
+      - name: Checkout Deployment repo
+        uses: actions/checkout@v4
+        with:
+          repository: AraiNea/Deployment
+          token: ${{ secrets.GITHUB_TOKEN }}
+          path: deployment
+  
+      - name: Setup kubectl
+        uses: azure/setup-kubectl@v4
+  
+      - name: Setup Minikube (optional)
+        uses: medyagh/setup-minikube@latest
+  
+      - name: Apply manifests
+        run: |
+          kubectl apply -f deployment/k8s/namespace.yaml || true
+          sleep 3
+          kubectl apply -f deployment/k8s/
