--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -101,24 +101,6 @@ jobs:
         if: failure()
         run: docker logs be
 
-      # ติดตั้ง Cypress
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Install dependencies
-        run: npm ci
-
-      # ✅ Run Cypress tests
-      - name: Run Cypress tests
-        uses: cypress-io/github-action@v6
-        with:
-          wait-on: "http://localhost:3000"
-          wait-on-timeout: 180
-        env:
-          VITE_API_URL: http://localhost:8080
-
       # Push image (optional)
       - name: Push Docker image
         run: docker push cxgdn/arainea-frontend:latest
@@ -147,3 +129,30 @@ jobs:
           kubectl apply -f deployment/k8s/namespace.yaml || true
           sleep 3
           kubectl apply -f deployment/k8s/
+#เพิ่ม
+  cypress-test:
+    name: Run Cypress Tests (after deploy)
+    needs: deploy
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Frontend repo
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install dependencies
+        run: npm ci
+
+      # ✅ รัน Cypress test หลังจาก deploy เสร็จ
+      - name: Run Cypress tests
+        uses: cypress-io/github-action@v6
+        with:
+          wait-on: ${{ secrets.PRODUCTION_URL }}
+          wait-on-timeout: 180
+          browser: chrome
+        env:
+          VITE_API_URL: ${{ secrets.PRODUCTION_URL }}
