--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -146,6 +146,19 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+      - name: Wait for deployed site to be ready
+        run: |
+          echo "⏳ Waiting for site to be ready..."
+          for i in {1..30}; do
+            if curl -sSf ${{ secrets.PRODUCTION_URL }} >/dev/null; then
+              echo "✅ Site is reachable!"
+              exit 0
+            fi
+            echo "⌛ Waiting ($i/30)..."
+            sleep 5
+          done
+          echo "❌ Site not reachable!"
+          exit 1
 
       # ✅ รัน Cypress test หลังจาก deploy เสร็จ
       - name: Run Cypress tests
