--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -130,38 +130,6 @@ jobs:
           sleep 3
           kubectl apply -f deployment/k8s/
 #เพิ่ม
-  cypress-test:
-    name: Run Cypress Tests 
-    needs: deploy
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Frontend repo
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Install dependencies
-        run: npm ci
-        
-      - name: Wait for frontend to be ready
-        run: |
-          echo "⏳ Waiting for frontend to start..."
-          for i in {1..30}; do
-            if curl -sSf http://localhost:3000 >/dev/null; then
-              echo "✅ Frontend is ready!"
-              exit 0
-            fi
-            echo "⌛ Waiting ($i/30)..."
-            sleep 5
-          done
-          echo "❌ Frontend did not start in time"
-          docker logs frontend || true
-          exit 1
-
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
@@ -171,6 +139,9 @@ jobs:
         env:
           VITE_API_URL: http://localhost:8080
 
+      # Show frontend logs if Cypress fail
       - name: Show frontend logs if test fails
         if: failure()
         run: docker logs frontend || true
+
+      
