--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -130,18 +130,26 @@ jobs:
           sleep 3
           kubectl apply -f deployment/k8s/
 #เพิ่ม
+      # ✅ ติดตั้ง Node.js สำหรับ Cypress
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+         node-version: 20
+
+      - name: Install dependencies
+        run: npm ci
+
+    # ✅ (เพิ่มบล็อกนี้) Port-forward frontend จาก K8s -> localhost
+      - name: Port forward frontend service
+        run: |
+         nohup kubectl port-forward svc/frontend 3000:80 -n arainea &
+         sleep 10
+
+    # ✅ รัน Cypress หลังจากเว็บพร้อมแล้ว
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
-          browser: chrome
-          wait-on: "http://localhost:3000"
-          wait-on-timeout: 180
+         wait-on: "http://localhost:3000"
+         wait-on-timeout: 180
         env:
-          VITE_API_URL: http://localhost:8080
-
-      # Show frontend logs if Cypress fail
-      - name: Show frontend logs if test fails
-        if: failure()
-        run: docker logs frontend || true
-
-      
+         VITE_API_URL: http://localhost:8080
