--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -129,8 +129,13 @@ jobs:
           kubectl apply -f deployment/k8s/namespace.yaml || true
           sleep 3
           kubectl apply -f deployment/k8s/
+        
 #เพิ่ม
-      # ✅ ติดตั้ง Node.js สำหรับ Cypress
+  cypress:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    # ✅ ติดตั้ง Node.js สำหรับ Cypress
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -139,7 +144,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-    # ✅ (เพิ่มบล็อกนี้) Port-forward frontend จาก K8s -> localhost
+    # ✅ Port-forward frontend จาก K8s -> localhost
       - name: Port forward frontend service
         run: |
          nohup kubectl port-forward svc/frontend 3000:80 -n arainea &
@@ -153,3 +158,4 @@ jobs:
          wait-on-timeout: 180
         env:
          VITE_API_URL: http://localhost:8080
+
