--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,7 +36,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag cxgdn/arainea-frontend:latest
+        run: |
+          docker build . \
+            --file Dockerfile \
+            --build-arg VITE_API_URL=${{ env.VITE_API_URL }} \
+            -t cxgdn/arainea-frontend:latest
 
       - name: Login to Docker Hub
         run: docker login -u cxgdn -p dckr_pat_NQDxIKYdnllF5XD5HRDypIEYy1U
